crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@gem_support.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/gem_support.txt
---
Item {
    item_class: "Support Gems",
    rarity: Gem,
    name: Some(
        "Prototype Seventeen",
    ),
    base_type: None,
    item_level: None,
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [
        Property {
            name: "Category",
            value: "Prototype",
        },
    ],
    rune_mods: [],
    modifiers: [],
    flavour_text: [
        "The murals tell a story of creation, of design... the Precursors\ndelved into the secrets of life itself. In their war with the Abyssals,\nthey sought to breed warriors, grown in legions, to fight back...",
    ],
    description: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
