crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@inscribed_ultimatum.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/inscribed_ultimatum.txt
---
Item {
    item_class: "Inscribed Ultimatum",
    rarity: Currency,
    name: Some(
        "Inscribed Ultimatum",
    ),
    base_type: None,
    item_level: Some(
        80,
    ),
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [
        Property {
            name: "Area Level",
            value: "80",
        },
        Property {
            name: "Number of Trials",
            value: "10",
        },
        Property {
            name: "in knowing the answer",
            value: "all of them.",
        },
    ],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    description: [
        "Deadly",
        "Mortals spend their lives wondering which",
        "fate shall be theirs. Chaos takes amusement",
        "Take this item to The Temple of Chaos to participate in a Trial of Chaos.",
    ],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
