crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@magic_relic.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/magic_relic.txt
---
Item {
    item_class: "Relics",
    rarity: Magic,
    name: Some(
        "Djinn's Seal Relic of Abundance",
    ),
    base_type: None,
    item_level: Some(
        79,
    ),
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Djinn's",
            ),
            tier: Some(
                1,
            ),
            tags: [],
            stats: [
                "Gain 59(50-59) Sacred Water at the start of the Trial",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of Abundance",
            ),
            tier: Some(
                1,
            ),
            tags: [],
            stats: [
                "Fountains have 15(11-15)% chance to grant double Sacred Water",
            ],
        },
    ],
    flavour_text: [],
    description: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
