crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@magic_two_hand_mace.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/magic_two_hand_mace.txt
---
Item {
    item_class: "Two Hand Maces",
    rarity: Magic,
    name: Some(
        "Frozen Disintegrating Maul",
    ),
    base_type: None,
    item_level: Some(
        64,
    ),
    quality: None,
    requirements: Requirements {
        level: Some(
            62,
        ),
        strength: Some(
            109,
        ),
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [
        Property {
            name: "Physical Damage",
            value: "92-112",
        },
        Property {
            name: "Cold Damage",
            value: "41-61 (cold)",
        },
        Property {
            name: "Critical Hit Chance",
            value: "8.00%",
        },
        Property {
            name: "Attacks per Second",
            value: "1.10",
        },
    ],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Implicit,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "Causes Enemies to Explode on Critical kill, for 10% of their Life as Physical Damage",
            ],
        },
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Frozen",
            ),
            tier: Some(
                5,
            ),
            tags: [
                "Damage",
                "Elemental",
                "Cold",
                "Attack",
            ],
            stats: [
                "Adds 41(32-43) to 61(49-66) Cold Damage",
            ],
        },
    ],
    flavour_text: [],
    description: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
