crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@map_fragment.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/map_fragment.txt
---
Item {
    item_class: "Map Fragments",
    rarity: Normal,
    name: None,
    base_type: Some(
        "An Audience with the King",
    ),
    item_level: None,
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    description: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
