crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@meta_gem.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/meta_gem.txt
---
Item {
    item_class: "",
    rarity: Gem,
    name: Some(
        "Animus Splinters",
    ),
    base_type: None,
    item_level: None,
    quality: None,
    requirements: Requirements {
        level: Some(
            90,
        ),
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: Some(
        "G G",
    ),
    stack_size: None,
    properties: [
        Property {
            name: "Level",
            value: "20 (Max)",
        },
        Property {
            name: "Cost",
            value: "0 Ward",
        },
        Property {
            name: "Cooldown Time",
            value: "8.00s",
        },
    ],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    description: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
